crates/stef-compiler/tests/snapshots/compiler__error_validate@enum_named_tuple_empty.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two {\n        field: () @1,\n    } @2,\n}"
input_file: crates/stef-compiler/tests/inputs/validate/enum_named_tuple_empty.stef
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭zero elements❬W❭ are invalid
   ╭─[enum_named_tuple_empty.stef:1:1]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two {
 4 │         field: () @1,
   ·                ─┬
   ·                 ╰── declared here
 5 │     } @2,
 6 │ }
   ╰────
  help: a tuple must have between 2 and 12 elements

