crates/stef-compiler/tests/snapshots/compiler__error_validate@enum_named_tuple_too_large.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two {\n        field: (u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8) @1,\n    } @2,\n}"
input_file: crates/stef-compiler/tests/inputs/validate/enum_named_tuple_too_large.stef
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭more than 12 elements❬W❭ are invalid
   ╭─[enum_named_tuple_too_large.stef:1:1]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two {
 4 │         field: (u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8, u8) @1,
   ·                ──────────────────────────┬─────────────────────────
   ·                                          ╰── declared here
 5 │     } @2,
 6 │ }
   ╰────
  help: a tuple must have between 2 and 12 elements

