crates/stef-compiler/tests/snapshots/compiler__error_validate@enum_unnamed_tuple_single.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "enum Sample {\n    One @1,\n    Two((u8) @1) @2,\n}"
input_file: crates/stef-compiler/tests/inputs/validate/enum_unnamed_tuple_single.stef
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭a single element❬W❭ are invalid
   ╭─[enum_unnamed_tuple_single.stef:1:1]
 1 │ enum Sample {
 2 │     One @1,
 3 │     Two((u8) @1) @2,
   ·         ──┬─
   ·           ╰── declared here
 4 │ }
   ╰────
  help: a tuple must have between 2 and 12 elements

