crates/stef-compiler/tests/snapshots/compiler__error_validate@struct_gen_dup.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "struct Sample<T, T> {\n    value: T @1,\n}"
input_file: crates/stef-compiler/tests/inputs/validate/struct_gen_dup.stef
---
  × invalid generic type found
  ├─▶ duplicate generic type name found
  ╰─▶ duplicate generic type name `T`
   ╭─[struct_gen_dup.stef:1:1]
 1 │ struct Sample<T, T> {
   ·               ┬  ┬
   ·               │  ╰── used here again
   ·               ╰── first declared here
 2 │     value: T @1,
 3 │ }
   ╰────
  help: the names of each generic type must be unique

